WIP Js y cambios a main y scripts

--- a/app/views/app/ordenServicio/create/_inspeccion.scala.html
+++ b/app/views/app/ordenServicio/create/_inspeccion.scala.html
@@ -4,7 +4,7 @@
 )
 
 
-	<div class="row" id="accionEntonacion" style="display: none;">			
+	<div class="row" id="accionEntonacion" >			
 		<div class="col-sm-12 col-md-12 dimMargin">
 			<legend><h4>@tipo</h4></legend>
 
@@ -28,7 +28,7 @@
 				</div>
 				<div class="col-md-3 col-sm-3">
 					<input type="radio" name="funda" value="Anotaciones">
-					<label for="funda">A</label>
+					<label for="funda">*</label>
 				</div>
 			</div>
 		}
