--- a/app/views/app/ordenServicio/create/formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/formCreate.scala.html
@@ -71,7 +71,7 @@ ordenServicio: OrdenServicio = null
 							<label for="guitarraAcustica">Guitarra Acústica</label>
 						</div>
 						<div>
-							<input type="radio" name="otro" value="Otro">
+							<input type="radio" name="otroInstrumento" id="otroInstrumento" value="Otro">
 							<label for="otroInstrumento">Otro</label>
 						</div>
 						<div id="otroInstrumentoInput" class="col-md-12" style="display: none;">
@@ -225,6 +225,18 @@ ordenServicio: OrdenServicio = null
 		</div>
 	</div>
 	
+	<div class="row">
+		<div class="col-md-12">
+			<legend><h3>Condiciones</h3></legend>
+			<div id="condicionesFrente " class="panel panel-default col-md-6" style="width: 300px; height: 300px;">
+				
+			</div>
+			<div id="condicionesTras " class="panel panel-default col-md-6" style="width: 300px; height: 300px;">
+				
+			</div>
+		</div>
+	</div>
+
 	<div class="row">
 		<div class="col-md-12">
 			<legend><h3>Servicios a realizar</h3></legend>
