--- a/app/views/layouts/templates/header.scala.html
+++ b/app/views/layouts/templates/header.scala.html
@@ -6,6 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	@styles
+
 	<link rel="icon" href="@routes.Assets.versioned("images/minuscula.png")">
 	<title>@title</title>
 
@@ -16,6 +18,7 @@
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/lib/awesome-bootstrap-checkbox.css")">
         
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
-    <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/jquery/jquery-1.11.1.min.js")"></script> 
-    <script type="text/javascript" src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")"></script> 
+
+
+    
 </head>
