--- a/app/views/statics/index.scala.html
+++ b/app/views/statics/index.scala.html
@@ -5,8 +5,11 @@
        
 }
 
+@scripts = {
+	
+}
 
-@layouts.main("Taller Cordófonos",styles,true){
+@layouts.main("Taller Cordófonos",styles, scripts,true){
  	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
  	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
  	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
