--- a/app/views/app/ordenServicio/create/formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/formCreate.scala.html
@@ -60,10 +60,10 @@ ordenServicio: OrdenServicio = null
 			<legend><h3>Instrumento</h3></legend>
 			<h4>Tipo de instrumento</h4>
 			<div class="row">
-				<div id="tipoInstrumento" class="col-md-12 radio ">
+				<div id="tipoInstrumento" class="col-md-12  ">
 					<div class="col-md-6">
 						<div>
-							<input type="radio" name="guitarraElectrica" value="Guitarra Eléctrica">
+							<input class="form-control" type="radio" name="guitarraElectrica" value="Guitarra Eléctrica">
 							<label for="guitarraElectrica">Guitarra Eléctrica</label>
 						</div>
 						<div>
@@ -229,7 +229,7 @@ ordenServicio: OrdenServicio = null
 		<div class="col-md-12">
 			<legend><h3>Condiciones</h3></legend>
 			<div id="condicionesFrente " class="panel panel-default col-md-6" style="width: 300px; height: 300px;">
-				
+				<input type="file" name="adjunto" id="adjunto">
 			</div>
 			<div id="condicionesTras " class="panel panel-default col-md-6" style="width: 300px; height: 300px;">
 				
