--- a/app/views/layouts/templates/header.scala.html
+++ b/app/views/layouts/templates/header.scala.html
@@ -15,7 +15,7 @@
     
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
 
-    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/lib/awesome-bootstrap-checkbox.css")">
+    <!-- <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/lib/awesome-bootstrap-checkbox.css")"> -->
         
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
 
