--- a/app/views/layouts/templates/_scripts.scala.html
+++ b/app/views/layouts/templates/_scripts.scala.html
@@ -3,5 +3,8 @@
     <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/jquery/jquery-1.11.1.min.js")"></script> 
     <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/jquery/jquery-3.2.1.js")"></script> 
     <script type="text/javascript" src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/datatables/DataTables-1.10.16/js/jquery.dataTables.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/underscore/underscore.js")"></script>
+
 
     @scripts
