--- a/app/views/layouts/templates/navbar.scala.html
+++ b/app/views/layouts/templates/navbar.scala.html
@@ -15,7 +15,7 @@ displayMenu: Boolean)
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="@routes.HomeController.index()">Inicio</a></li>
-          <li><a href="#">Buscar Orden</a></li>
+          <li><a href="@routes.OrdenesServicios.buscador()">Buscar Orden</a></li>
           <li><a href="@routes.OrdenesServicios.indexCreateOrden()">Crear Orden</a></li>
           <li><a href="#">Venta</a></li>
           <li><a href="#">Accesorios</a></li>
