WIP js create OS -- fecha y num orden

--- a/app/views/app/ordenServicio/create/formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/formCreate.scala.html
@@ -5,19 +5,16 @@ ordenServicio: OrdenServicio = null
 	<div class="row ">
 		<div class="col-md-12">
 			<h2><strong>Orden de Servicio</strong></h2>
-			<h4>Número de Orden <span id="numOrden" style="color: #E22C2C; vertical-align: bottom; background-color: #dff0d8;">0000</span></h4>
+			<h4>Número de Orden <strong><span id="numOrden" style="color: #E22C2C; vertical-align: bottom; background-color: #dff0d8;">0000</span></strong></h4>
 		</div>
 		<div class="row">
 			<div class="col-md-12">
 				<div class="col-md-4 col-sm-4 col-xs-4">
-					<h4>Fecha (TODO)</h4>
+					<h4>Fecha de recepción <span id="fechaRecepcion" style="color: #E22C2C; vertical-align: bottom; background-color: #dff0d8;">0000</span></h4>
 				</div>
-				<div class="col-md-4 col-sm-4 col-xs-4">
+				<div class="col-md-4 col-sm-4 col-xs-4" style="display: none;">
 					<h4>Entrega (TODO)</h4>
 				</div>	
-				<div class="col-md-4 col-sm-4 col-xs-4">
-					<h4>Hora (TODO)</h4>
-				</div>
 			</div>
 		</div>
 	</div>
