--- a/app/views/app/ordenServicio/create/indexCreateOrdenServicio.scala.html
+++ b/app/views/app/ordenServicio/create/indexCreateOrdenServicio.scala.html
@@ -4,6 +4,11 @@
 }
 
 @scripts = {
+	<script type="text/javascript">
+        var currentdate = new Date("@(new Date())");
+        
+        console.log("currentdate: ",currentdate);
+	</script>
 	<script src="@routes.Assets.versioned("javascripts/app/ordenServicio/create/create-orden.js")"> </script>
 	
 }
