--- a/app/views/app/ordenServicio/create/_inspeccion.scala.html
+++ b/app/views/app/ordenServicio/create/_inspeccion.scala.html
@@ -17,25 +17,25 @@
 			<div class="radio  clearfix col-md-4 col-sm-4">
 				<div class="col-md-3 col-sm-3">
 					<label>
-						<input type="radio" name="funda" value="Óptimas Condiciones">
+						<input class="clearCheck" type="radio" name="inspeccion@labels(i)" value="Óptimas Condiciones">
 						B
 					</label>
 				</div>
 				<div class="col-md-3 col-sm-3">
 					<label>
-						<input type="radio" name="funda" value="Puede requerir Atención">
+						<input class="clearCheck" type="radio" name="inspeccion@labels(i)" value="Puede requerir Atención">
 						R
 					</label>
 				</div>
 				<div class="col-md-3 col-sm-3">
 					<label>
-						<input type="radio" name="funda" value="Atención Inmediata">
+						<input class="clearCheck" type="radio" name="inspeccion@labels(i)" value="Atención Inmediata">
 						M
 					</label>
 				</div>
 				<div class="col-md-3 col-sm-3">
 					<label>
-						<input type="radio" name="funda" value="Anotaciones">
+						<input class="clearCheck" type="radio" name="inspeccion@labels(i)" value="Anotaciones">
 						*
 					</label>
 				</div>
