--- a/app/views/app/ordenServicio/create/formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/formCreate.scala.html
@@ -3,22 +3,22 @@ ordenServicio: OrdenServicio = null
 )
 <div id="formOrdenServicio">
 	<div class="row ">
-		<div class="col-md-12">
+		<div class="col-md-offset-6 col-md-6 col-sm-offset-6 col-sm-6 col-xs-offset-6 col-xs-6">
 			<h2><strong>Orden de Servicio</strong></h2>
-			<h4>Número de Orden <strong><span id="numOrden" style="color: #E22C2C; vertical-align: bottom; background-color: #dff0d8;">0000</span></strong></h4>
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<div class="col-md-4 col-sm-4 col-xs-4">
-					<h4>Fecha de recepción <span id="fechaRecepcion" style="color: #E22C2C; vertical-align: bottom; background-color: #dff0d8;">0000</span></h4>
+				<div class="panel panel-default col-md-offset-6 col-md-6 col-sm-offset-6 col-sm-6 col-xs-offset-6 col-xs-6">
+				<h4>Número de Orden: <strong><span id="numOrden" class="label label-danger">0000</span></strong></h4>
+					<h4>Fecha de recepción: <span id="fechaRecepcion" class="label label-danger">00/00/0000</span></h4>
 				</div>
-				<div class="col-md-4 col-sm-4 col-xs-4" style="display: none;">
+				<div class=" panel panel-default col-sm-offset-6 col-sm-6 col-xs-offset-6 col-xs-6" <!-- style="display: none;" -->>
 					<h4>Entrega (TODO)</h4>
 				</div>	
 			</div>
 		</div>
 	</div>
-	<hr>
+	<br>
 	<div class="row">
 		<div class="col-md-12">
 			
@@ -260,18 +260,31 @@ ordenServicio: OrdenServicio = null
 		<div class="row">
 			<div class="col-md-12">
 				<legend><h3>Condiciones</h3></legend>
-				<div id="condicionesFrente " class="panel panel-default col-md-6">
-					<div style="width: 300px; height: 300px;">
+				<div class="row clearfix">
+					<div class="row">
+						<div id="condicionesFrente " class="panel panel-default col-md-4 col-md-offset-2">
+							<h5>Condiciones Frente</h5>
+							<div style="width: 200px; height: 200px;">
 
-					</div>
-					<div class="col-md-offset-2">
-						<input type="file" name="adjunto" id="adjunto">
+							</div>
+						</div>
+						<div id="condicionesTras " class="panel panel-default col-md-4" >
+							<h5>Condiciones Reverso</h5>
+							<div style="width: 200px; height: 200px;">
+								
+							</div>
+						</div>
 						
 					</div>
-					
-				</div>
-				<div id="condicionesTras " class="panel panel-default col-md-6" style="width: 300px; height: 300px;">
-					
+					<div class="row">
+						<div class="col-md-4 col-md-offset-2">
+							<input type="file" name="adjunto" id="adjuntoFrente">
+						</div>
+						<div class="col-md-6">
+							<input type="file" name="adjunto" id="adjuntoReverso">
+						</div>
+						
+					</div>
 				</div>
 			</div>
 		</div>
@@ -281,7 +294,8 @@ ordenServicio: OrdenServicio = null
 				<legend><h3>Servicios a realizar</h3></legend>
 				<div class="row">
 					<div class="col-md-6">
-						<select name="" id="">
+						<select name="" id="" class="form-control">
+				            <option value="" disabled="disabled" selected>Seleccione una opci&oacute;n</option>
 							<option value="">1</option>
 							<option value="">2</option>
 							<option value="">3</option>
