ADD - Firma electrónica
Change - Modelo Orden Servicio

--- a/app/views/app/ordenServicio/create/indexCreateOrdenServicio.scala.html
+++ b/app/views/app/ordenServicio/create/indexCreateOrdenServicio.scala.html
@@ -9,7 +9,22 @@
         
         console.log("currentdate: ",currentdate);
 	</script>
-	<script src="@routes.Assets.versioned("javascripts/app/ordenServicio/create/create-orden.js")"> </script>
+	<script src="@routes.Assets.versioned("javascripts/app/ordenServicio/create/create-orden.js")"></script>
+
+	<script src="@routes.Assets.versioned("javascripts/libs/jSignature/jSignature/flashcanvas.js")"></script>
+	<script src="@routes.Assets.versioned("javascripts/libs/jSignature/jSignature/jSignature.min.js")"></script>
+	<script>
+	    $(document).ready(function() {
+	        $("#firmaElectronica").jSignature();
+	        $('#limpiarBtn').bind('click', function () {
+	        	$("#firmaElectronica").jSignature('clear');
+	        });
+	        var datapair = $("#firmaElectronica").jSignature("getData", "svgbase64");
+			var i = new Image();
+			i.src = "data:" + datapair[0] + "," + datapair[1];
+			$(i).appendTo($("#firmaElectronicaPrint")); // append the image (SVG) to DOM.
+	    })
+	</script>
 	
 }
 @layouts.main("Crear Orden de Servicio",styles,scripts,false){
