--- a/app/views/app/ordenServicio/create/formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/formCreate.scala.html
@@ -3,16 +3,17 @@ ordenServicio: OrdenServicio = null
 )
 <div id="formOrdenServicio">
 	<div class="row ">
-		<div class="col-md-offset-6 col-md-6 col-sm-offset-6 col-sm-6 col-xs-offset-6 col-xs-6">
+		<div class="col-md-offset-6 col-md-6 col-sm-offset-6 col-sm-6 col-xs-12">
 			<h2><strong>Orden de Servicio</strong></h2>
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<div class="panel panel-default col-md-offset-6 col-md-6 col-sm-offset-6 col-sm-6 col-xs-offset-6 col-xs-6">
-				<h4>Número de Orden: <strong><span id="numOrden" class="label label-danger">0000</span></strong></h4>
+				<div class="panel panel-default col-md-offset-6 col-md-6 col-sm-offset-6 col-sm-6 col-xs-12">
+					<h4>Número de Orden: <strong><span id="numOrden" class="label label-danger">0000</span></strong></h4>
 					<h4>Fecha de recepción: <span id="fechaRecepcion" class="label label-danger">00/00/0000</span></h4>
+					<h4>Inspección Realizada por: <span id="realizadaPor" class="label label-success"></span></h4>
 				</div>
-				<div class=" panel panel-default col-sm-offset-6 col-sm-6 col-xs-offset-6 col-xs-6" <!-- style="display: none;" -->>
+				<div class=" panel panel-default col-sm-offset-6 col-sm-6 col-xs-12" >
 					<h4>Entrega (TODO)</h4>
 				</div>	
 			</div>
@@ -262,13 +263,13 @@ ordenServicio: OrdenServicio = null
 				<legend><h3>Condiciones</h3></legend>
 				<div class="row clearfix">
 					<div class="row">
-						<div id="condicionesFrente " class="panel panel-default col-md-4 col-md-offset-2">
+						<div id="condicionesFrente " class="panel panel-default col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-8 col-xs-offset-2">
 							<h5>Condiciones Frente</h5>
 							<div style="width: 200px; height: 200px;">
 
 							</div>
 						</div>
-						<div id="condicionesTras " class="panel panel-default col-md-4" >
+						<div id="condicionesTras " class="panel panel-default col-md-4 col-sm-4 col-xs-8 col-xs-offset-2">
 							<h5>Condiciones Reverso</h5>
 							<div style="width: 200px; height: 200px;">
 								
@@ -277,10 +278,10 @@ ordenServicio: OrdenServicio = null
 						
 					</div>
 					<div class="row">
-						<div class="col-md-4 col-md-offset-2">
+						<div class="col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2">
 							<input type="file" name="adjunto" id="adjuntoFrente">
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-6 col-sm-6">
 							<input type="file" name="adjunto" id="adjuntoReverso">
 						</div>
 						
@@ -288,6 +289,8 @@ ordenServicio: OrdenServicio = null
 				</div>
 			</div>
 		</div>
+		
+		<br>
 
 		<div class="row">
 			<div class="col-md-12">
@@ -331,22 +334,56 @@ ordenServicio: OrdenServicio = null
 				</div>
 			</div>
 		</div>
+		
+		<br>
+
+		<div class="row">
+			<div class="col-md-12">
+				<legend><h3>Firma del Cliente</h3></legend>
+				<div class="col-md-12">
+					<div id="firmaElectronica"> 
+						
+					</div>
+					<div  id="demotools" class="text-center col-md-6 col-md-offset-3">
+						<!-- <span><b>Extraer data de firma como:</b></span>
+						<select class="form-control">
+							<option value="" disabled="disabled" selected>Selecciona una opci&oacute;n</option>
+							<option value="default">default</option>
+							<option value="native">native</option><option value="image">image</option>
+							<option value="base30">base30</option>
+							<option value="image/jsignature;base30">image/jsignature;base30</option>
+							<option value="svg">svg</option>
+							<option value="image/svg+xml">image/svg+xml</option>
+							<option value="svgbase64">svgbase64</option>
+							<option value="image/svg+xml;base64">image/svg+xml;base64</option>
+						</select>
+						<span><b> o </b></span> -->
+						<input class="btn" id="limpiarBtn" type="button" value="Limpiar">
+					</div>
+					<div id="firmaElectronicaPrint"> 
+						
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<br>
 
 		<div class="row">
 			<div class="col-md-12 col-sm-12 col-xs-12">
-				<div class="col-md-6 col-sm-6 col-xs-6">
-					 <button class="center btn btn-danger">
+				<div class="text-center col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
+					 <button class="btn btn-danger">
 					 	Guardar
 					 </button>
-				</div>
-				<div class="col-md-6 col-sm-6 col-xs-6">
 					 <button class="btn btn-default">
 					 	Cancelar
 					 </button>
-				</div>
-				
+				</div>			
 			</div>
 		</div>
+
+		<br>
+
 	</div>
 </div>
 
