ADD style switcher

--- a/app/views/layouts/loginLayout.scala.html
+++ b/app/views/layouts/loginLayout.scala.html
@@ -7,19 +7,33 @@
         <title>@title</title>
         <link rel="icon" href="@routes.Assets.versioned("images/minuscula.png")">
         <link rel="stylesheet" href="@routes.Assets.versioned("bootstrap/css/bootstrap.css")"> 
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/login.css")">
+
+        <link id="styleLink" rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/login.css")">
+
         <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
     </head>
     <body class="container-fluid">
         <div class="row">
             <section id="header" class="col-md-12">
-                <h1>Cordófonos</h1>
-                <h3>Taller de Guitarras y Bajos</h3>
+                <div class="col-md-4 ">
+                    <h1>Cordófonos</h1>
+                    <h3>Taller de Guitarras y Bajos</h3>
+
+                </div>
             </section>
+            <div class="col-md-4">
+                <ul>
+                    <li><a id="stylBtn1" href="#" rel="/assets/stylesheets/login.css">Tema1</a></li>
+                    <li><a id="stylBtn2" href="#" rel="/assets/stylesheets/switchCss/loginBlack.css">Tema2</a></li>
+                </ul>
+            </div>
         </div>
         <div class="contentWrapper">
         @content
         </div>
-        @layouts.templates.footer()                                      
+        @layouts.templates.footer()
+
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/jquery/jquery-3.2.1.js")"></script>                                      
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/app/login/login.js")"></script>                                      
     </body>
 </html>
