--- a/app/views/statics/login.scala.html
+++ b/app/views/statics/login.scala.html
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-md-12" >
 				<section class="row">
-					<div class="panel panel-default input-centerd col-md-offset-3 col-md-6">
+					<div class="input-centerd col-md-offset-3 col-md-6">
 						<h3 >Inicia Sesión</h3>
 						@helper.form(routes.Authenticate.authenticate()){
 							<div class="row">
