--- a/app/views/layouts/loginLayout.scala.html
+++ b/app/views/layouts/loginLayout.scala.html
@@ -34,6 +34,7 @@
         @layouts.templates.footer()
 
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/jquery/jquery-3.2.1.js")"></script>                                      
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/jscookie/js.cookie.js")"></script>                                      
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/app/login/login.js")"></script>                                      
     </body>
 </html>
