--- a/public/stylesheets/switchCss/loginBlack.css
+++ b/public/stylesheets/switchCss/loginBlack.css
@@ -12,7 +12,7 @@ h3{
 }
 #header{
   z-index: -1;
-  height: 80px;
+  /*height: 80px;*/
   background: #1D1E21;
   /*background-image: url("https://www.transparenttextures.com/patterns/subtle-dark-vertical.png");*/
   /*background-image: url("https://www.transparenttextures.com/patterns/60-lines.png");*/
@@ -23,10 +23,11 @@ h3{
   padding-right: 20%;
   padding-left: 20%;
   padding-top: 1em;
-  padding-bottom: auto; 
-  opacity: 0.6;
+  /*padding-bottom: auto; */
+  opacity: 65,67,74;
 }
 #header h1{
+  opacity: 1.0;
   font-family: 'Maven Pro', sans-serif;
   color: #E22C2C;
   text-shadow: 3px 3px black;
@@ -42,9 +43,9 @@ h3{
 .contentWrapper{
   z-index: -2;
   /*background-color:#1D1E21;*/
-  position: fixed;
-  left: 15%;
-  right: 15%;
+  position: relative;
+  /*left: 15%;
+  right: 15%;*/
   top: 80px;
   bottom: 0;
   /*opacity: 0.6;*/
