--- a/app/views/app/ordenServicio/create/indexCreateOrdenServicio.scala.html
+++ b/app/views/app/ordenServicio/create/indexCreateOrdenServicio.scala.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript">
         var currentdate = new Date("@(new Date())");
         
-        console.log("currentdate: ",currentdate);
+        // console.log("currentdate: ",currentdate);
 	</script>
 	<script src="@routes.Assets.versioned("javascripts/app/ordenServicio/create/create-orden.js")"></script>
 
