--- a/app/views/app/ordenServicio/create/formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/formCreate.scala.html
@@ -252,37 +252,8 @@ ordenServicio: OrdenServicio = null
 					</div>
 				</div>
 				
-				<div class="row">
-					<div class="col-md-12">
-						<legend><h3>Condiciones</h3></legend>
-						<div class="row clearfix">
-							<div class="row">
-								<div id="condicionesFrente " class="panel panel-default col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-8 col-xs-offset-2">
-									<h5>Condiciones Frente</h5>
-									<div style="width: 200px; height: 200px;">
+				@condiciones()
 
-									</div>
-								</div>
-								<div id="condicionesTras " class="panel panel-default col-md-4 col-sm-4 col-xs-8 col-xs-offset-2">
-									<h5>Condiciones Reverso</h5>
-									<div style="width: 200px; height: 200px;">
-
-									</div>
-								</div>
-
-							</div>
-							<div class="row">
-								<div class="col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2">
-									<input type="file" name="adjunto" id="adjuntoFrente">
-								</div>
-								<div class="col-md-6 col-sm-6">
-									<input type="file" name="adjunto" id="adjuntoReverso">
-								</div>
-
-							</div>
-						</div>
-					</div>
-				</div>
 			</div>
 
 			<div id="indicaciones" class="col-md-12 tab-pane fade">
@@ -305,105 +276,24 @@ ordenServicio: OrdenServicio = null
 			
 			<br>
 
-			<div id="servicios" class="col-md-12 tab-pane fade">
-				<div class="col-md-12">
-					<legend><h3>Servicios a realizar</h3></legend>
-					<div class="row">
-						<div class="col-md-6">
-							<select name="" id="" class="form-control">
-					            <option value="" disabled="disabled" selected>Seleccione una opci&oacute;n</option>
-								<option value="">1</option>
-								<option value="">2</option>
-								<option value="">3</option>
-							</select>	
-						</div>
-						<div class="col-md-6">
-							<button class="btn btn-default">Agregar Servicio</button>
-						</div>
-					</div>
-
-					<br>
-
-					<div class="row">
-						<div class=" col-md-12">
-							<table class="table" id="tabla-prueba">
-								<thead>
-									<tr>
-										<th>a</th>
-										<th>b</th>
-										<th>c</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>lolas</td>
-										<td>lalas</td>
-										<td>lelas</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>	
-						
-					</div>
-				</div>
-			</div>
-			
-			<br>
-
-			<div class="col-md-12">
-					<br>
-					<legend><h3>Firma del Cliente</h3></legend>
-				<div class="col-md-12">
-					<div class="row">
-						<div id="firmaElectronica"> 
-							
-						</div>
-						<div  id="demotools" class="text-center col-md-6 col-md-offset-3">
-							<!-- <span><b>Extraer data de firma como:</b></span>
-							<select class="form-control">
-								<option value="" disabled="disabled" selected>Selecciona una opci&oacute;n</option>
-								<option value="default">default</option>
-								<option value="native">native</option><option value="image">image</option>
-								<option value="base30">base30</option>
-								<option value="image/jsignature;base30">image/jsignature;base30</option>
-								<option value="svg">svg</option>
-								<option value="image/svg+xml">image/svg+xml</option>
-								<option value="svgbase64">svgbase64</option>
-								<option value="image/svg+xml;base64">image/svg+xml;base64</option>
-							</select>
-							<span><b> o </b></span> -->
-							<input class="btn" id="limpiarBtn" type="button" value="Limpiar">
-							<input class="btn" id="guardarFirmaBtn" type="button" value="Guardar Firma">
-						</div>
-						<div class="row">
-							<br>
-							<div class="col-md-12" id="firmaElectronicaPrint"> 
-								<img class="print img-responsive" src="" alt="">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			
-			<br>
-
-			<div class="row">
-				<div class="col-md-12 col-sm-12 col-xs-12">
-					<div class="text-center col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
-						 <a class="saveBtn btn btn-danger">
-						 	Guardar
-						 </a>
-						 <a href="@routes.HomeController.index" class="btn btn-default">
-						 	Cancelar
-						 </a>
-					</div>			
-				</div>
-			</div>
-
-			<br>
-
+			@agregaServicios()
 		</div>
 		
+		<div class="row" style="margin-top: 30px; margin-bottom: 30px;">
+			<div class="col-md-12 col-sm-12 col-xs-12">
+				<div class="text-center col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-4 col-xs-offset-2">
+					 <a class="saveBtn btn btn-danger">
+					 	Guardar
+					 </a>
+				</div>
+				<div class="text-center col-md-4 col-sm-4 col-xs-4">
+					 <a href="@routes.HomeController.index" class="btn btn-default">
+					 	Cancelar
+					 </a>
+					
+				</div>		
+			</div>
+		</div>
 	<!-- </div> -->
 </div>
 
