--- a/app/views/app/ordenServicio/create/formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/formCreate.scala.html
@@ -221,26 +221,28 @@ ordenServicio: OrdenServicio = null
 							
 						</div>
 					</div>
-
-					@_inspeccion("accionEntonacion","Acción y Entonación",
-					Array("Acción en el Puente","Acción en Cejuela", "Curvatura de Brazo", "Entonación")
-					)
-					@_inspeccion("condicionesAjuste","Condiciones para Ajuste",
-					Array("Puente","Cejuela", "Trastes", "Tuerca de ajuste de Alma", "Alma de ajuste de Brazo", "Condiciones del Diapasón","Condiciones del Brazo", "Ángulo del Brazo")
-					)
-					@_inspeccion("electronica","Electrónica",
-					Array("Pastilla del Puente","Pastilla del Centro", "Pastilla del Brazo", "Piezo / Micrófono", "Jack", "Potenciómetro Volúmen 1","Potenciómetro Volúmen 2", "Potenciómetro Tono 1", "Potenciómetro Tono 2", "Selector", "Interruptores", "Calidad de Conexión", "Tierra Física", "Blindaje", "Módulo Preamplificador", "Potenciómetro Blend", "Potenciómetro EQ Graves", "Potenciómetro EQ Medios", "Potenciómetro EQ Agudos", "Batería", "Conector de Batería")
-					)
-					@_inspeccion("herrajes","Herrajes",
-					Array("Segletas","Prisioneros", "Bujes y postes", "Palanca de Trémolo", "Maquinaria", "Candados","Guías de Cuerda", "Resortes", "Pines para Tahalí", "Pines para Cuerdas")
-					)
-					@_inspeccion("plasticos","Plásticos / Tapas / Placas",
-					Array("Mica","Marcos de Pastillas", "Perillas", "Portajack", "Tapa de Alma", "Tapa de Circuitos","Tapa de Resortes", "Tapa / Caja para Batería", "Placa / Rondanas de Brazo", "Ferrules","Tornillería")
-					)
+					<div class="col-md-12">
+						
+						@_inspeccion("accionEntonacion","Acción y Entonación",
+						Array("Acción en el Puente","Acción en Cejuela", "Curvatura de Brazo", "Entonación")
+						)
+						@_inspeccion("condicionesAjuste","Condiciones para Ajuste",
+						Array("Puente","Cejuela", "Trastes", "Tuerca de ajuste de Alma", "Alma de ajuste de Brazo", "Condiciones del Diapasón","Condiciones del Brazo", "Ángulo del Brazo")
+						)
+						@_inspeccion("electronica","Electrónica",
+						Array("Pastilla del Puente","Pastilla del Centro", "Pastilla del Brazo", "Piezo / Micrófono", "Jack", "Potenciómetro Volúmen 1","Potenciómetro Volúmen 2", "Potenciómetro Tono 1", "Potenciómetro Tono 2", "Selector", "Interruptores", "Calidad de Conexión", "Tierra Física", "Blindaje", "Módulo Preamplificador", "Potenciómetro Blend", "Potenciómetro EQ Graves", "Potenciómetro EQ Medios", "Potenciómetro EQ Agudos", "Batería", "Conector de Batería")
+						)
+						@_inspeccion("herrajes","Herrajes",
+						Array("Segletas","Prisioneros", "Bujes y postes", "Palanca de Trémolo", "Maquinaria", "Candados","Guías de Cuerda", "Resortes", "Pines para Tahalí", "Pines para Cuerdas")
+						)
+						@_inspeccion("plasticos","Plásticos / Tapas / Placas",
+						Array("Mica","Marcos de Pastillas", "Perillas", "Portajack", "Tapa de Alma", "Tapa de Circuitos","Tapa de Resortes", "Tapa / Caja para Batería", "Placa / Rondanas de Brazo", "Ferrules","Tornillería")
+						)
+					</div>
 
 				</div>
 
-				<div class="row">
+				<div class="row" style="display: none;">
 					<div class="col-md-12 col-sm-12">
 						<legend><h3>Anotaciones</h3></legend>
 						<div class="col-md-6 col-sm-6">
