--- a/app/views/layouts/templates/navbar.scala.html
+++ b/app/views/layouts/templates/navbar.scala.html
@@ -14,11 +14,11 @@ displayMenu: Boolean)
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="@routes.HomeController.index()">Inicio</a></li>
-          <li><a href="@routes.OrdenesServicios.buscador()">Buscar Orden</a></li>
-          <li><a href="@routes.OrdenesServicios.indexCreateOrden()">Crear Orden</a></li>
-          <li><a href="#">Venta</a></li>
-          <li><a href="#">Accesorios</a></li>
+          <li class="active"><a href="@routes.HomeController.index()"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Inicio</a></li>
+          <li><a href="@routes.OrdenesServicios.buscador()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Buscar Orden</a></li>
+          <li><a href="@routes.OrdenesServicios.indexCreateOrden()"><span class="glyphicon glyphicon-copy" aria-hidden="true"></span> Crear Orden</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-usd"></span> Venta</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-list"></span> Accesorios</a></li>
          <!--  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Acciones Admin<span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -31,7 +31,7 @@ displayMenu: Boolean)
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Usuario.getByName(session().get("userName")).obtenNombre <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-off"></span> @Usuario.getByName(session().get("userName")).obtenNombre <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Catálogos</a></li>
               <li><a href="#">Usuarios</a></li>
