--- a/app/views/statics/index.scala.html
+++ b/app/views/statics/index.scala.html
@@ -10,10 +10,13 @@
 }
 
 @layouts.main("Taller Cordófonos",styles, scripts,true){
- 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
- 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
- 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
- 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
- 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
- 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<br>
+	<br>
+
+	<h2>¡Bienvenido!</h2>
+	<br>
+ 	<p>Estás en la página de Inicio del Sistema Cordófonos</p>
+ 	<br>
+ 	<br>
+
 }
