ADD - hide inspecciones

--- a/app/views/app/ordenServicio/create/_inspeccion.scala.html
+++ b/app/views/app/ordenServicio/create/_inspeccion.scala.html
@@ -7,7 +7,7 @@
 
 	<div class="row" id="@id" style="display:none;">			
 		<div class="col-sm-12 col-md-12 dimMargin">
-			<legend id="legend-@id"><h4>@tipo <span id="toggler-@id" class="glyphicon glyphicon-menu-up" ></span></h4></legend>
+			<legend><h4 id="legend-@id" value="@id">@tipo <span id="toggler-@id" class="glyphicon glyphicon-menu-up" ></span></h4></legend>
 
 			<div id="inner-@id">
 			@for( i<- 0 to (labels.length -1)) {
