ADD - Json servicios token input
Add - lib loopj

--- a/app/views/layouts/templates/_scripts.scala.html
+++ b/app/views/layouts/templates/_scripts.scala.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/datatables/DataTables-1.10.16/js/jquery.dataTables.js")"></script>
     <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/underscore/underscore.js")"></script>
     <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/dateFormat/jquery-dateFormat.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/loopj/jquery.tokeninput.js")"></script>
 
 
     @scripts
