--- a/app/views/app/ordenServicio/create/agregaServicios.scala.html
+++ b/app/views/app/ordenServicio/create/agregaServicios.scala.html
@@ -2,7 +2,8 @@
 	<div class="col-md-12">
 		<legend><h3>Servicios a realizar</h3></legend>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-8">
+				<label>Servicio:</label>
 				<select name="" id="" class="form-control">
 		            <option value="" disabled="disabled" selected>Seleccione una opci&oacute;n</option>
 					<option value="">1</option>
@@ -10,8 +11,20 @@
 					<option value="">3</option>
 				</select>	
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-4">
 				<button class="btn btn-default">Agregar Servicio</button>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8">
+				<label>Técnico Responsable:</label>
+				<input class="form-control" type="text">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8">
+				<label>Costo:</label>
+				<input class="form-control" type="text">
 			</div>
 		</div>
 
@@ -41,5 +54,7 @@
 			
 		</div>
 	</div>
-	@firma()
+	<div class="row">
+		
+	</div>
 </div>
