--- a/app/views/app/ordenServicio/create/firma.scala.html
+++ b/app/views/app/ordenServicio/create/firma.scala.html
@@ -3,9 +3,7 @@
 	<legend><h3>Firma del Cliente</h3></legend>
 	<div class="col-md-12">
 		<div class="row">
-			<div id="firmaElectronica"> 
-				
-			</div>
+			<div id="firmaElectronica"></div>
 			<div  id="demotools" class="text-center col-md-6 col-md-offset-3">
 				<!-- <span><b>Extraer data de firma como:</b></span>
 				<select class="form-control">
