--- a/app/views/app/ordenServicio/create/formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/formCreate.scala.html
@@ -279,9 +279,10 @@ ordenServicio: OrdenServicio = null
 			<br>
 
 			@agregaServicios()
+				@firma()
 		</div>
 		
-		<div class="row" style="margin-top: 30px; margin-bottom: 30px;">
+		<div class="row" style="margin-top: 50px; margin-bottom: 50px;">
 			<div class="col-md-12 col-sm-12 col-xs-12">
 				<div class="text-center col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-4 col-xs-offset-2">
 					 <a class="saveBtn btn btn-danger">
