--- a/app/views/layouts/templates/header.scala.html
+++ b/app/views/layouts/templates/header.scala.html
@@ -20,6 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
 
     <link rel="stylesheet" href="@routes.Assets.versioned("javascripts/libs/datatables/DataTables-1.10.16/css/jquery.dataTables.css")">
+    <link rel="stylesheet" href="@routes.Assets.versioned("javascripts/libs/loopj/token-input.css")">
 
     
 </head>
