--- a/app/views/app/ordenServicio/create/agregaServicios.scala.html
+++ b/app/views/app/ordenServicio/create/agregaServicios.scala.html
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-md-8">
 				<label>Servicio:</label>
-				<select name="" id="" class="form-control">
+				<select name="" id="optionsServicios" class="form-control">
 		            <option value="" disabled="disabled" selected>Seleccione una opci&oacute;n</option>
 					<option value="">1</option>
 					<option value="">2</option>
